--- a/porject.html
+++ b/porject.html
@@ -11,7 +11,7 @@
     <div class="img">
      <div class="container">
         <div class="wrapper">
-            <div class="title"><span>Login Form</span></div>
+            <div class="title"><span>Signup Form</span></div>
             <form action="#">
                 <div class="row">
                     <input type="text" placeholder="Email or phone">
